<resources>
    <string name="app_name">NestH2O</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="webView_eulaTitleActionBar">User Agreement</string>
    <string name="webView_eulaTitle">Please read &amp; click the Accept button.</string>
    <string name="select_country">select country</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="users">Users</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email_user">User Email:</string>
    <string name="email_verified">Email Verified:</string>
    <string name="login_title">Login</string>
    <string name="logout">Logout</string>
    <string name="create_act">Create Account</string>
    <string name="etEmail">Email</string>
    <string name="etPassword">Password</string>
    <string name="send_password_reset_email">Send password reset email</string>
    <string name="bathroom1">Bathroom 1</string>
    <string name="bathroom2">Bathroom 2</string>
    <string name="kitchen">Kitchen</string>
    <string name="yard_tap">Yard Tap</string>
    <string name="shower_room">Shower</string>
    <string name="bath_room_sink">Bathroom Sink</string>
    <string name="cold_water_tap">Cold Water Tap</string>
    <string name="hot_water_tap">Hot Water Tap</string>
    <string name="water_leak">Leak Detected</string>
    <string name="leakDetection">Leak Detection</string>
    <string name="leakDescription">Alert! %s</string>
    <string name="gauge_prompt">What do you prefer?</string>
    <string name="get_selected_guage">Select</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="close">CL</string>
    <string name="open10">OP10</string>
    <string name="open20">OP20</string>
    <string name="open30">OP30</string>
    <string name="open40">OP40</string>
    <string name="open50">OP50</string>
    <string name="open60">OP60</string>
    <string name="open70">OP70</string>
    <string name="open80">OP80</string>
    <string name="open90">OP90</string>
    <string name="open100">OP100</string>
    <string name="open110">OP110</string>
    <string name="open120">OP120</string>
    <string name="open130">OP130</string>
    <string name="open140">OP140</string>
    <string name="open150">OP150</string>
    <string name="open160">OP160</string>
    <string name="open170">OP170</string>
    <string name="open">OP</string>
    <string name="decline">Decline</string>
    <string name="agree">Agree</string>
    <string name="user_agreement">user agreement</string>
    <string name="arduino_functionality">ARDUINO Functionality</string>
    <string name="water_saving">Water Saving</string>
    <string name="carousel_taps">Carousel Taps</string>
    <string name="water_price">Water Price</string>
    <string name="water_price_calculations">Water Price Calculations:</string>
    <string name="water_flow">Water Flow</string>
    <string name="water_flow_calculations">Water Flow Calculations:</string>
    <string name="water_saving_calculations">Water Saving Calculations:</string>
    <string name="control_panel">Control Panel</string>
    <string name="flow_gpm">%s gpm</string>
    <string name="gpm">\u0020 gpm</string>
</resources>
