<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ic_water_bg">

    <LinearLayout
        android:id="@+id/ll_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="80dp"
        android:gravity="center_horizontal"
        android:layout_margin="@dimen/fab_margin"

        android:orientation="vertical">

        <EditText
            android:id="@+id/et_email"
            style="@style/ViewCustom"
            android:ems="10"
            android:hint="@string/etEmail"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/et_password"
            style="@style/ViewCustom"
            android:ems="10"
            android:hint="@string/etPassword"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/btn_login"
            style="@style/ViewCustom"
            android:background="@color/colorAccent"
            android:text="@string/login_title"
            android:textColor="@android:color/white"
            android:textStyle="bold" />
        <TextView
            android:id="@+id/tv_forgot_password"
            style="@style/ViewCustom"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center_horizontal"
            android:text="@string/forgot_password"
            android:textColor="@color/colorDarkBlue"
            android:textSize="20sp" />
    </LinearLayout>

    <Button
        android:id="@+id/btn_register_account"
        style="@style/ViewCustom"
        android:layout_alignParentBottom="true"
        android:background="@color/colorAccent"
        android:text="@string/create_act"
        android:textColor="@android:color/white"
        android:layout_margin="@dimen/fab_margin"
        android:textStyle="bold" />
</RelativeLayout>