<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp"
    android:gravity="center">

    <ImageButton
        android:id="@+id/ib_profile_pic"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true"
        android:background="@drawable/ic_water_bg"
        android:scaleType="centerCrop" />

    <TableLayout
        android:id="@+id/tl_data"
        android:layout_below="@id/ib_profile_pic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_centerInParent="true">
        <TableRow>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/first_name"
                android:textSize="18sp" />
            <TextView
                android:id="@+id/tv_first_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp" />
        </TableRow>
        <TableRow>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/last_name"
                android:textSize="18sp" />
            <TextView
                android:id="@+id/tv_last_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp" />
        </TableRow>
        <TableRow>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/email_user"
                android:textSize="18sp" />
            <TextView
                android:id="@+id/tv_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp" />
        </TableRow>
        <TableRow>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/email_verified"
                android:textSize="18sp" />
            <TextView
                android:id="@+id/tv_email_verifiied"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp" />
        </TableRow>
    </TableLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_alignParentBottom="true">

        <Button
            android:id="@+id/btn_bathroom1"
            style="@style/ViewCustom"
            android:background="@android:color/holo_orange_dark"
            android:text="@string/bathroom1"
            android:textColor="@android:color/white"
            android:typeface="serif"
            android:textStyle="bold" />
        <Button
            android:id="@+id/btn_bathroom2"
            style="@style/ViewCustom"
            android:background="@android:color/holo_purple"
            android:text="@string/bathroom2"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            android:typeface="serif" />
        <Button
            android:id="@+id/btn_kitchen"
            style="@style/ViewCustom"
            android:background="@android:color/holo_red_dark"
            android:text="@string/carousel_taps"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            android:typeface="serif" />
    </LinearLayout>

</RelativeLayout>